--- a/_includes/selected_papers.liquid
+++ b/_includes/selected_papers.liquid
@@ -1,3 +1,8 @@
+{% comment %}
+<!-- Bibliography feature disabled for GitHub Pages compatibility -->
+<!-- {% bibliography --group_by none --query @*[selected=true]* %} -->
+{% endcomment %}
+
 <div class="publications">
-  {% bibliography --group_by none --query @*[selected=true]* %}
+  <p><em>Selected publications will be displayed here once jekyll-scholar plugin is available.</em></p>
 </div>
