--- a/_includes/selected_papers.liquid
+++ b/_includes/selected_papers.liquid
@@ -1,8 +1,3 @@
-{% comment %}
-<!-- Bibliography feature disabled for GitHub Pages compatibility -->
-<!-- {% bibliography --group_by none --query @*[selected=true]* %} -->
-{% endcomment %}
-
 <div class="publications">
-  <p><em>Selected publications will be displayed here once jekyll-scholar plugin is available.</em></p>
+  {% bibliography --group_by none --query @*[selected=true]* %}
 </div>
