--- a/_layouts/distill.liquid
+++ b/_layouts/distill.liquid
@@ -96,8 +96,7 @@
         <d-citation-list></d-citation-list>
       </d-appendix>
 
-      <!-- Bibliography disabled for GitHub Pages compatibility -->
-      <!-- <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}"></d-bibliography> -->
+      <d-bibliography src="{{ page.bibliography | prepend: '/assets/bibliography/' | relative_url }}"></d-bibliography>
 
       {% if site.disqus_shortname and page.disqus_comments %}{% include disqus.liquid %}{% endif %}
       {% if site.giscus.repo and page.giscus_comments %}
